--- a/src/components/Card/Card.module.css
+++ b/src/components/Card/Card.module.css
@@ -1,6 +1,6 @@
 .card{
     width: 150px;
-    height: 200px;
+    min-height: 200px;
     border: 1px solid silver;
     border-radius: 8px;
     transition: 0.5s all;
@@ -10,10 +10,14 @@
     box-shadow: 0 0 10px silver;
 }
 .card h2{
+    padding: 5px;
     font-size: 2rem;
     color:black;
+    margin-bottom: 10px;
 }
 .card h4{
+    padding-left: 5px;
+    text-align: start;
     font-size: 1.4rem;
     color: rgb(114, 114, 114)
 }
