--- a/src/components/Card/Card.module.css
+++ b/src/components/Card/Card.module.css
@@ -1,5 +1,6 @@
 .card {
-  width: 150px;
+  width: 200px;
+  padding-bottom: 10px;
   min-height: 200px;
   border: 1px solid silver;
   border-radius: 8px;
@@ -10,14 +11,19 @@
   box-shadow: 0 0 10px silver;
 }
 .card h2 {
-  padding: 5px;
+  padding: 10px;
   font-size: 2rem;
   color: black;
   margin-bottom: 10px;
 }
 .card h4 {
-  padding-left: 5px;
+  padding-left: 10px;
   text-align: start;
-  font-size: 1.4rem;
+  font-size: 1.6rem;
   color: rgb(114, 114, 114);
+}
+
+.card img {
+  width: 100%;
+  border-radius: 5px;
 }
