feat: added a disable class for buttons

--- a/src/index.css
+++ b/src/index.css
@@ -53,6 +53,18 @@ button {
   transition: border-color 0.25s;
 }
 
+.disabled-button{
+  background-color: silver;
+}
+
+.disabled-button:hover{
+  scale: 1;
+}
+
+.disabled-button:active{
+  background-color: silver;
+}
+
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
