--- a/src/index.css
+++ b/src/index.css
@@ -21,6 +21,16 @@
   -webkit-text-size-adjust: 100%;
 }
 
+#root {
+  max-width: 1280px;
+  margin: 0 auto;
+  padding: 2rem;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+
 a {
   font-weight: 500;
   color: #646cff;
@@ -31,6 +41,7 @@ a:hover {
 }
 
 body {
+  background-color: white;
   margin: 0;
   min-width: 320px;
   min-height: 100vh;
