feat: complete all test

--- a/src/index.css
+++ b/src/index.css
@@ -76,6 +76,10 @@ button {
   background-color: silver;
 }
 
+.hide {
+  display: none;
+}
+
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
